# youbot_ux

./: README.md
src/: CMakeLists.txt  package.xml
src/launch/: 42.launch
src/src/: status_to_joy.py  velocity_move_youbot.py  velocity_move_youbot_grasp.py  youbot_drive_joy.py  youbot_states.py  youbot_states_feedback.py
trajectory_recorder/: CMakeLists.txt  README.md
trajectory_recorder/include/trajectory_recorder/: trajectory_recorder.h
trajectory_recorder/launch/: trajectory_recorder.launch
trajectory_recorder/src/: trajectory_recorder.cpp
trajectory_recorder/srv/: GetRecordedTrajectory.srv  SendHackedTrajectory.srv
trajectory_replayer/: CMakeLists.txt  README.md  package.xml
trajectory_replayer/include/trajectory_replayer/: trajectory_replayer.h
trajectory_replayer/launch/: trajectory_replayer.launch
trajectory_replayer/src/: trajectory_replayer.cpp  trajectory_replayer_node.cpp
youbot/youbot_driver_ros_interface/launch/: youbot_driver.launch
youbot_ux/: CMakeLists.txt  package.xml  problem.txt
youbot_ux/config/: controls.yaml
youbot_ux/launch/: 42.launch  grasp.launch  launcher.launch  launcher_arm.launch  test_launcher.launch
youbot_ux/scripts/: status_to_joy.py  youbot_drive_joy.py  youbot_record_grasp_control.py  youbot_states.py  youbot_states_feedback.py  youbot_trajectory_record.py  youbot_velocity_move.py  youbot_velocity_move_grasp.py
youbot_ux/src/: er_client_node.cpp  velocity_move_youbot_grasp.py  youbot_drive_joy.py  youbot_states.py  youbot_states_feedback.py  youbot_trajectory_record.py
